Fixed spacing issues, also removed the edit button from posts that don't belong to the logged in user

--- a/static/datalocker/css/common.css
+++ b/static/datalocker/css/common.css
@@ -103,6 +103,10 @@ button[role='comment-reply'] {
   display: block;
 }
 
+.comment-actions {
+  display: inline-block;
+}
+
 .comment-button {
   clear: left;
   float: right;
